--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-1/_sidebar.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-1/_sidebar.scss
@@ -57,6 +57,6 @@
 	background-repeat: no-repeat;
 
 	@media (prefers-color-scheme: dark) {
-		background-color: var(--newtab-background-color);
+		background-color: var(--ntp-background-color);
 	}
 }
