--- a/Profile Folder/chrome/styles/partials/chrome/chrome-11/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-11/_toolbars.scss
@@ -17,7 +17,7 @@
 			padding-inline: 3px !important;
 			
 			> * {
-				margin-top: -4px !important;
+				margin-top: -2px !important;
 				margin-bottom: 2px !important;
 			}
 		}
