--- a/Profile Folder/chrome/styles/partials/chrome/chrome-21/_toolbars.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-21/_toolbars.scss
@@ -88,7 +88,6 @@
 	&:not([personalbar="newtab"]) {
 		#PersonalToolbar {
 			> * {
-				margin-top: -5px !important;
 				margin-bottom: 1px !important;
 			}
 		}
